@@ -1,64 +1,75 @@
 package com.dfds.demolyy.utils.ProtocolUtils;
-
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.JSONObject;
 import com.alibaba.fastjson.serializer.SerializerFeature;
-import com.serotonin.modbus4j.base.ModbusUtils;
+import io.netty.buffer.ByteBuf;
 import org.apache.commons.lang3.StringUtils;
 import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
-import java.util.Arrays;
 
-/**-------------------
- * 16进制处理工具
+/**
  * @author LiYangYang
  * @date 2022/11/18
  */
 public class HexUtils {
-    /**-----------------
-     * HexString -> Int
-     */
-    public static int hexString2Int(String numberHex){
-        return Integer.parseUnsignedInt(numberHex,16);
-    }
 
-    /**-----------------
-     * HexString -> Long
+    /**---------------------
+     * HexStr -> uShort
      */
-    public static long hexString2Long(String numberHex){
-        return Long.parseUnsignedLong(numberHex,16);
+    public static int hexStr2uShort(String hexStr){
+        return Integer.parseInt(hexStr, 16);
+    }
+    /**-------------------
+     * HexStr -> uint
+     */
+    public static long hexStr2uInt(String hexStr){
+        return Long.parseLong(hexStr,16);
     }
 
     /**---------------------
-     * HexString -> Short
+     * HexStr -> Short 有符号
      */
-    public static short hexStringToShort(String hexString){
-        return Integer.valueOf(hexString,16).shortValue();
-        //return new Integer(Integer.parseUnsignedInt(hexString,16)).shortValue();
+    public static short hexStr2Short(String hexStr){
+        return Integer.valueOf(hexStr,16).shortValue();
+        //return new Integer(Integer.parseUnsignedInt(hexStr,16)).shortValue();
     }
 
-    /**-------------------
-     * short -> HexString
+    /**--------------------
+     * HexStr -> Int 有符号
      */
-    public static String shortToHexString(short num){
-        String numberHex = Integer.toHexString(num & 0xffff);
-        int n = 4 - numberHex.length();
+    public static int hexStr2Int(String hexStr){
+        return Integer.parseUnsignedInt(hexStr,16);
+    }
+
+    /**---------------------
+     * HexStr -> Long 有符号
+     */
+    public static long hexStr2Long(String hexStr){
+        return Long.parseUnsignedLong(hexStr,16);
+    }
+
+    /**----------------------
+     * short -> HexStr 有符号
+     */
+    public static String short2HexStr(short shortValue){
+        String shortHex = Integer.toHexString(shortValue & 0xffff);
+        int n = 4 - shortHex.length();
         if (n>0){
             StringBuilder zero = new StringBuilder();
             for (int i = 1; i <=n ; i++) {
                 zero.append("0");
             }
-            return zero + numberHex;
+            return zero + shortHex;
         }
-        return numberHex;
+        return shortHex;
     }
 
-    /**-----------------------------
-     * int -> HexString标准格式
+    /**----------------------------------------------
+     * int -> HexStr标准格式 (可转无符号short, 有符号int)
      * @param byteSize 该数字的字节长度
      */
-    public static String numberToHex(Integer number, int byteSize){
-        String numberHex = Integer.toHexString(number);
+    public static String int2HexStr(Integer value, int byteSize){
+        String numberHex = Integer.toHexString(value);
         int n = byteSize*2 - numberHex.length();
 
         if (n > 0){
@@ -71,11 +82,12 @@ public class HexUtils {
         return numberHex;
     }
 
-    /**--------------------------
-     * Long -> HexString标准格式
+    /**--------------------------------------------------
+     * Long -> HexString标准格式 (可转无符号int , 有符号long)
+     * @param byteSize 该数字的字节长度
      */
-    public static String longToHex(Long number, int byteSize){
-        String numberHex = Long.toHexString(number);
+    public static String long2HexStr(Long value, int byteSize){
+        String numberHex = Long.toHexString(value);
         int n = byteSize*2 - numberHex.length();
 
         if (n > 0){
@@ -88,34 +100,34 @@ public class HexUtils {
         return numberHex;
     }
 
-    /**-------------------
-     * HexString -> byte[]
+    /**----------------
+     * HexStr -> byte[]
      */
-    public static byte[] hexStringToByteArray(String str){
-        int l = str.length()/2;
+    public static byte[] hexStr2Bytes(String hexStr){
+        int l = hexStr.length()/2;
         byte[] byteArray = new byte[l];
         for (int i = 0; i < l; i++) {
             // 截取str每两位转为byte
-            byteArray[i] = Integer.valueOf(str.substring(i*2,i*2+2),16).byteValue();
+            byteArray[i] = Integer.valueOf(hexStr.substring(i*2,i*2+2),16).byteValue();
         }
         return byteArray;
     }
-
-    /**---------------------
-     * byte[] -> HexString
+    /**-----------------
+     * byte[] -> HexStr
      */
-    public static String byteArray2HexString(byte[] b) {
+    public static String bytes2HexStr(byte[] b) {
         StringBuffer buffer = new StringBuffer();
         for (int i = 0; i < b.length; ++i) {
-            buffer.append(byte2HexString(b[i]));
+            buffer.append(byte2HexStr(b[i]));
         }
         return buffer.toString();
     }
 
-    /**--------------------
-     * byte -> HexString
+
+    /**---------------
+     * byte -> HexStr
      */
-    public static String byte2HexString(byte b) {
+    public static String byte2HexStr(byte b) {
         String s = Integer.toHexString(b & 0xFF);
         if (s.length() == 1) {
             return "0" + s;
@@ -124,33 +136,19 @@ public class HexUtils {
         }
     }
 
-    /**--------------------------------------
-     * 编码：TextString+Encoding -> HexString
-     * @param textStr 待转文本
-     * @param encoding 编码 ASCII,GB2312,GBK,Unicode...
-     */
-    public static String textStr2HexStr(String textStr, String encoding){
-        try {
-            byte[] bytes = StringUtils.getBytes(textStr, encoding);
-            return byteArray2HexString(bytes);
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return null;
-    }
-
-    /**--------------------------------------
-     * 解码：HexString+Encoding -> TextString
-     * @param hexString 待转16进制
+    /**--------------------------------
+     * 解码：HexStr+Encoding -> TextStr
+     * @param hexStr 待转16进制
      * @param encoding 编码
+     * @return 根据编码转换后的文本字符串
      */
-    public static String hexStr2TestStr(String hexString, String encoding){
+    public static String hexStr2TextStr(String hexStr, String encoding){
         try {
             // 去除多余的空字符方式1：
-            return new String(hexStringToByteArray(hexString), encoding).replace("\u0000","");
+            return new String(hexStr2Bytes(hexStr), encoding).replace("\u0000","");
 
             // 去除多余的空字符方式2：
-            // byte[] bytes = hexStringToByteArray(hexString);
+            // byte[] bytes = hexStringToByteArray(hexStr);
             // int length = 0;
             // for (int i = 0; i < bytes.length; i++) {
             //     if (bytes[i] == 0){
@@ -165,11 +163,26 @@ public class HexUtils {
         return null;
     }
 
-    /**--------------------
+    /**--------------------------------------
+     * 编码：TextStr+Encoding -> HexStr
+     * @param textStr 待转文本
+     * @param encoding 编码 ASCII,GB2312,GBK,Unicode...
+     */
+    public static String textStr2HexStr(String textStr, String encoding){
+        try {
+            byte[] bytes = StringUtils.getBytes(textStr, encoding);
+            return bytes2HexStr(bytes);
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    /**----------------
      * float -> byte[]
      */
-    public static byte[] float2byte(float f) {
-        int fbit = Float.floatToIntBits(f);
+    public static byte[] float2bytes(float floatValue) {
+        int fbit = Float.floatToIntBits(floatValue);
         byte[] b = new byte[4];
         for (int i = 0; i < 4; i++) {
             b[i] = (byte) (fbit >> (24 - i * 8));
@@ -190,19 +203,19 @@ public class HexUtils {
         return dest;
     }
 
-    /**
-     * float -> HEX
+    /**---------------
+     * float -> HexStr
      */
-    public static String float2HexString(float f){
-        return byteArray2HexString(float2byte(f));
+    public static String float2HexStr(float f){
+        return bytes2HexStr(float2bytes(f));
     }
 
     /**-------------------------
      * byte[] -> float
      * @param b 字节（至少4个字节）
-     * @param index 开始位置
+     * @param index 开始位置,默认填0
      */
-    public static float byte2float(byte[] b, int index) {
+    public static float bytes2float(byte[] b, int index) {
         int l;
         l = b[index + 0];
         l &= 0xff;
@@ -211,31 +224,55 @@ public class HexUtils {
         l |= ((long) b[index + 2] << 16);
         l &= 0xffffff;
         l |= ((long) b[index + 3] << 24);
+
+        // int accum = 0;
+        // accum = accum|(b[0] & 0xff) << 0;
+        // accum = accum|(b[1] & 0xff) << 8;
+        // accum = accum|(b[2] & 0xff) << 16;
+        // accum = accum|(b[3] & 0xff) << 24;
         return Float.intBitsToFloat(l);
     }
-    /**
-     * HEX -> float
+    /**-------------
+     * HexStr -> float
      */
-    public static float hexString2Float(String hexString){
-        return byte2float(hexStringToByteArray(hexString), 0);
+    public static float hexStr2Float(String hexStr){
+        return bytes2float(hexStr2Bytes(hexStr), 0);
+    }
+
+    /**-------------------------
+     * ByteBuf数组转16进制浮点数
+     * @param buf
+     * @param scale 需要保留的小数位个数
+     * @return
+     */
+    public static Double hexBuf2Float(ByteBuf buf, int scale) {
+        short[] b = new short[4];
+        b[2] = buf.isReadable() ? buf.readUnsignedByte() : 0;
+        b[3] = buf.isReadable() ? buf.readUnsignedByte() : 0;
+        b[0] = buf.isReadable() ? buf.readUnsignedByte() : 0;
+        b[1] = buf.isReadable() ? buf.readUnsignedByte() : 0;
+        StringBuilder buffer = new StringBuilder();
+        for (Short s : b) {
+            buffer.append(Integer.toHexString(s.intValue()));
+        }
+        long l = Long.parseLong(buffer.toString(), 16);
+        float f = Float.intBitsToFloat((int) l);
+        BigDecimal decimal = new BigDecimal(f);
+        return decimal.setScale(scale, BigDecimal.ROUND_HALF_UP).doubleValue();
     }
 
     /**------------------
-     * Double -> HEX
-     * @param doubleValue
-     * @return HEX
+     * Double -> HexStr
      */
-    public static String double2Hex(Double doubleValue){
+    public static String double2HexStr(Double doubleValue){
         return Long.toHexString(Double.doubleToLongBits(doubleValue));
     }
 
-    /**--------------
-     * Hex -> Double
-     * @param hex
-     * @return Double
+    /**-----------------
+     * HexStr -> Double
      */
-    public static Double hex2Double(String hex){
-        return Double.longBitsToDouble(Long.parseLong(hex, 16));
+    public static Double hexStr2Double(String hexStr){
+        return Double.longBitsToDouble(Long.parseLong(hexStr, 16));
     }
 
     /**----------------
@@ -243,11 +280,11 @@ public class HexUtils {
      */
     public static byte[] double2Bytes(double d) {
         long value = Double.doubleToRawLongBits(d);
-        byte[] byteRet = new byte[8];
+        byte[] bytes = new byte[8];
         for (int i = 0; i < 8; i++) {
-            byteRet[i] = (byte) ((value >> 8 * i) & 0xff);
+            bytes[i] = (byte) ((value >> 8 * i) & 0xff);
         }
-        return byteRet;
+        return bytes;
     }
 
     /**------------------------------------------
@@ -278,12 +315,12 @@ public class HexUtils {
         return str;
     }
 
-    /**-------------------------------------------------
+    /**-------------------------------------------
      * 十六进制字符串反序: AB CD EF GH ->GH EF CD AB
      */
-    private static String swapOrder(String hexString) {
+    private static String swapOrder(String hexStr) {
         // 转为16进制字符数组
-        String[] array = formatterHex(hexString).split(" ");
+        String[] array = formatterHex(hexStr).split(" ");
         String[] swapOrder = swapOrder(array);
         StringBuffer result = new StringBuffer();
         for (String string : swapOrder) {
@@ -294,37 +331,35 @@ public class HexUtils {
     /**
      * 字符数组反序: {"AB", "CD", "EF", "GH"} -> {"GH", "EF", "CD", "AB"}
      */
-    public static String[] swapOrder(String[] arr){
-        int length = arr.length;
+    public static String[] swapOrder(String[] strArr){
+        int length = strArr.length;
         //第一个和最后一个交换，第二个和倒数第二个交换
         for(int i=0;i<length/2;i++){
-            String temp = arr[i];
-            arr[i] = arr[length-1-i];
-            arr[length-1-i] = temp;
+            String temp = strArr[i];
+            strArr[i] = strArr[length-1-i];
+            strArr[length-1-i] = temp;
         }
-        return arr;
+        return strArr;
     }
 
-    /**
+    /**----------------
      * short -> byte[]
-     * @param num
-     * @param len
+     * @param shortValue
+     * @param len 字节数 1或2
      * @return
      */
-    private static byte[] getBytes(short num, int len) {
+    private static byte[] short2Bytes(short shortValue, int len) {
         if (len == 1) {
-            return new byte[]{(byte) (num & 0xFF)};
+            return new byte[]{(byte) (shortValue & 0xFF)};
         } else {
-            return new byte[]{(byte) (num & 0xFF), (byte) ((num >> Byte.SIZE) & 0xFF)};
+            return new byte[]{(byte) (shortValue & 0xFF), (byte) ((shortValue >> Byte.SIZE) & 0xFF)};
         }
     }
 
-    /**
-     * unsigned short -> byte[]
-     * @param bytes
-     * @return
+    /**----------------
+     * uShort -> byte[]
      */
-    public static int getUShort(byte... bytes) {
+    public static int uShort2bytes(byte... bytes) {
         int num = bytes[0] & 0xFF;
         if (bytes.length > 1) {
             num |= (bytes[1] & 0xFF) << Byte.SIZE;
@@ -332,11 +367,11 @@ public class HexUtils {
         return num;
     }
 
-    /**-----------------------------------------------------------
-     * byte[] -> Long (有符号)
+    /**--------------
+     * byte[] -> Long
      */
     public static int LEN_LONG = Long.SIZE / Byte.SIZE; //8字节long
-    public static long getLong(byte[] bytes, int idx) {
+    public static long bytes2Long(byte[] bytes, int idx) {
         long res = bytes[idx + LEN_LONG - 1];
         for (int i = idx + LEN_LONG - 2; i >= idx; i--) {
             res = (res << Byte.SIZE) | ((long) bytes[i] & 0xFFL);
@@ -344,10 +379,10 @@ public class HexUtils {
         return res;
     }
 
-    /**
-     * byte[] -> unsigned long
+    /**----------------
+     * byte[] -> uLong
      */
-    public static BigDecimal getULong(byte[] bytes, int idx) {
+    public static BigDecimal bytes2uLong(byte[] bytes, int idx) {
         // 7 * 8 = 2的56次方, 将ULong型数的最高位字节，从第一个字节还原所需的移动的位数
         final BigDecimal towOf56 = BigDecimal.valueOf((long) 1 << ((LEN_LONG - 1) * Byte.SIZE));
 
@@ -356,7 +391,7 @@ public class HexUtils {
         // 2. 将最高位置0
         bytes[idx + LEN_LONG - 1] = 0;
         // 3. 将除最高字节以外的byte数组转为有符号long
-        long tmp = getLong(bytes, idx);
+        long tmp = bytes2Long(bytes, idx);
         BigDecimal num = BigDecimal.valueOf(tmp);
 
         // 4.将最高位字节转成对应的大小的数
@@ -367,40 +402,39 @@ public class HexUtils {
         return num.add(highNum);
     }
 
-    /**-----------------------------
-     * HexString -> BinaryString
-     */
-    public static String hexString2binaryString(String hexString) {
-        String binaryString = Integer.toBinaryString(Integer.valueOf(hexString, 16));
-        return fillCharForString(binaryString, "0", 8, false);
-    }
-
-    /**
-     * BinaryString -> HexString
-     */
-    public static String binaryString2HexString(String binaryString){
-        return Integer.toHexString(Integer.valueOf(binaryString, 2));
-    }
-
     /**-----------------
-     * 16进制字符串 格式化
+     * HexStr -> BinStr
      */
-    public static String formatterHex(String strHex){
-        return strHex.replaceAll("(.{2})", "$1 ");
+    public static String hexStr2binStr(String hexStr) {
+        String binStr = Integer.toBinaryString(Integer.valueOf(hexStr, 16));
+        return fillCharForString(binStr, "0", 8, false);
+    }
+
+    /**-------------------
+     * BinStr -> HexStr
+     */
+    public static String binStr2HexStr(String binStr){
+        return Integer.toHexString(Integer.valueOf(binStr, 2));
+    }
+
+    /**-------------
+     * HexStr 格式化
+     */
+    public static String formatterHex(String hexStr){
+        return hexStr.replaceAll("(.{2})", "$1 ");
     }
 
     /**-----------
      * Json 格式化
      */
-    public static String jsonFormat(JSONObject jsonObject){
+    public static String formatterJson(JSONObject jsonObject){
         return JSON.toJSONString(jsonObject, SerializerFeature.PrettyFormat, SerializerFeature.WriteMapNullValue, SerializerFeature.WriteDateUseDateFormat);
     }
-
 
     /**--------------------
      * boolean[] -> byte[]
      */
-    public static byte[] convertToBytes(boolean[] bdata) {
+    public static byte[] booleans2bytes(boolean[] bdata) {
         int byteCount = (bdata.length + 7) / 8;
         byte[] data = new byte[byteCount];
         for(int i = 0; i < bdata.length; ++i) {
@@ -409,10 +443,22 @@ public class HexUtils {
         return data;
     }
 
-    /**
-     * short[] -> byte[]
+    /**---------------------
+     * byte[] -> boolean[]
      */
-    public static byte[] convertToBytes(short[] sdata) {
+    public static boolean[] bytes2Booleans(byte[] data) {
+        boolean[] bdata = new boolean[data.length * 8];
+        for(int i = 0; i < bdata.length; ++i) {
+            bdata[i] = (data[i / 8] >> i % 8 & 1) == 1;
+        }
+        return bdata;
+    }
+
+    //---
+    /**-------------------------------
+     * short[] -> byte[] (Big-Endian)
+     */
+    public static byte[] shorts2BytesBE(short[] sdata) {
         int byteCount = sdata.length * 2;
         byte[] data = new byte[byteCount];
         for(int i = 0; i < sdata.length; ++i) {
@@ -422,26 +468,162 @@ public class HexUtils {
         return data;
     }
 
-    /**---------------------
-     * byte[] -> boolean[]
+    /**------------------------------
+     * byte[] -> short[] (Big-Endian)
      */
-    public static boolean[] convertToBooleans(byte[] data) {
-        boolean[] bdata = new boolean[data.length * 8];
-        for(int i = 0; i < bdata.length; ++i) {
-            bdata[i] = (data[i / 8] >> i % 8 & 1) == 1;
-        }
-        return bdata;
-    }
-
-    /**--------------------
-     * byte[] -> short[]
-     */
-    public static short[] convertToShorts(byte[] data) {
+    public static short[] bytes2ShortsBE(byte[] data) {
         short[] sdata = new short[data.length / 2];
         for(int i = 0; i < sdata.length; ++i) {
             sdata[i] = (short)(data[i * 2] << 8 | data[i * 2 + 1] & 255);
         }
         return sdata;
+    }
+
+    /**-----------------------------
+     * short -> byte[] (Big-Endian)
+     */
+    public static byte[] short2BytesBE(short n) {
+        byte[] b = new byte[2];
+        b[1] = (byte) (n & 0xff);
+        b[0] = (byte) (n >> 8 & 0xff);
+        return b;
+    }
+
+    /**-----------------------------
+     * byte[] -> short (Big-Endian)
+     */
+    public static short bytes2ShortBE(byte[] b) {
+        return (short) (((b[0] << 8) | b[1] & 0xff));
+    }
+
+    /**-------------------------------
+     * short -> byte[] (Little-Endian)
+     */
+    public static byte[] short2BytesLE(short n) {
+        byte[] b = new byte[2];
+        b[0] = (byte) (n & 0xff);
+        b[1] = (byte) (n >> 8 & 0xff);
+        return b;
+    }
+
+    /**-------------------------------
+     * byte[] -> short (Little-Endian)
+     */
+    public static short bytes2ShortLE(byte[] b) {
+        return (short) (((b[1] << 8) | b[0] & 0xff));
+    }
+
+    /**---------------------------
+     * int -> byte[] (Big-Endian)
+     */
+    public static byte[] int2BytesBE(int n) {
+        byte[] b = new byte[4];
+        b[3] = (byte) (n & 0xff);
+        b[2] = (byte) (n >> 8 & 0xff);
+        b[1] = (byte) (n >> 16 & 0xff);
+        b[0] = (byte) (n >> 24 & 0xff);
+        return b;
+    }
+
+    /**-------------------------------
+     * int -> byte[] (Little-Endian)
+     */
+    public static byte[] int2BytesLE(int n) {
+        byte[] b = new byte[4];
+        b[0] = (byte) (n & 0xff);
+        b[1] = (byte) (n >> 8 & 0xff);
+        b[2] = (byte) (n >> 16 & 0xff);
+        b[3] = (byte) (n >> 24 & 0xff);
+        return b;
+    }
+
+    /**-----------------------------
+     * byte[] -> int (Little-Endian)
+     */
+    public static int bytes2IntLE(byte[] bytes) {
+        int int1 = bytes[0] & 0xff;
+        int int2 = (bytes[1] & 0xff) << 8;
+        int int3 = (bytes[2] & 0xff) << 16;
+        int int4 = (bytes[3] & 0xff) << 24;
+
+        return int1 | int2 | int3 | int4;
+    }
+
+    /**---------------------------
+     * byte[] -> int (Big-Endian)
+     */
+    public static int bytes2IntBE(byte[] bytes) {
+        int int1 = bytes[3] & 0xff;
+        int int2 = (bytes[2] & 0xff) << 8;
+        int int3 = (bytes[1] & 0xff) << 16;
+        int int4 = (bytes[0] & 0xff) << 24;
+        return int1 | int2 | int3 | int4;
+
+        // int num = bytes[3] & 0xFF;
+        // num |= ((bytes[2] << 8) & 0xFF00);
+        // num |= ((bytes[1] << 16) & 0xFF0000);
+        // num |= ((bytes[0] << 24) & 0xFF0000);
+        // return num;
+    }
+
+    /**----------------------------
+     * Long -> byte[] (Big-Endian)
+     */
+    public static byte[] long2BytesBE(long n) {
+        byte[] b = new byte[8];
+        b[7] = (byte) (n & 0xff);
+        b[6] = (byte) (n >> 8 & 0xff);
+        b[5] = (byte) (n >> 16 & 0xff);
+        b[4] = (byte) (n >> 24 & 0xff);
+        b[3] = (byte) (n >> 32 & 0xff);
+        b[2] = (byte) (n >> 40 & 0xff);
+        b[1] = (byte) (n >> 48 & 0xff);
+        b[0] = (byte) (n >> 56 & 0xff);
+        return b;
+    }
+
+    /**-------------------------------
+     * Long -> byte[] (Little-Endian)
+     */
+    public static byte[] long2BytesLE(long n) {
+        byte[] b = new byte[8];
+        b[0] = (byte) (n & 0xff);
+        b[1] = (byte) (n >> 8 & 0xff);
+        b[2] = (byte) (n >> 16 & 0xff);
+        b[3] = (byte) (n >> 24 & 0xff);
+        b[4] = (byte) (n >> 32 & 0xff);
+        b[5] = (byte) (n >> 40 & 0xff);
+        b[6] = (byte) (n >> 48 & 0xff);
+        b[7] = (byte) (n >> 56 & 0xff);
+        return b;
+    }
+
+    /**------------------------------
+     * byte[] -> Long (Little-Endian)
+     */
+    public static long bytes2LongLE(byte[] array) {
+        return ((((long) array[0] & 0xff) << 0)
+                | (((long) array[1] & 0xff) << 8)
+                | (((long) array[2] & 0xff) << 16)
+                | (((long) array[3] & 0xff) << 24)
+                | (((long) array[4] & 0xff) << 32)
+                | (((long) array[5] & 0xff) << 40)
+                | (((long) array[6] & 0xff) << 48)
+                | (((long) array[7] & 0xff) << 56));
+    }
+
+    /**----------------------------
+     * byte[] -> Long (Big-Endian)
+     */
+    public static long bytes2LongBE(byte[] array) {
+        return ((((long) array[0] & 0xff) << 56)
+                | (((long) array[1] & 0xff) << 48)
+                | (((long) array[2] & 0xff) << 40)
+                | (((long) array[3] & 0xff) << 32)
+                | (((long) array[4] & 0xff) << 24)
+                | (((long) array[5] & 0xff) << 16)
+                | (((long) array[6] & 0xff) << 8)
+                | (((long) array[7] & 0xff) << 0));
     }
 }
 
